@@ -1,33 +1,22 @@
 package com.inks.hb.common;
 
-import sun.misc.BASE64Encoder;
-
-import java.io.UnsupportedEncodingException;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 
 public class MD5 {
 
     public String getMD5(String str) {
-        //确定计算方法
-        MessageDigest md5 = null;
-        try {
-            md5 = MessageDigest.getInstance("MD5");
-        } catch (NoSuchAlgorithmException e) {
-            e.printStackTrace();
-        }
-        BASE64Encoder base64en = new BASE64Encoder();
-        //加密后的字符串
-        String strMD5 = null;
-        try {
-            strMD5 = base64en.encode(md5.digest(str.getBytes("utf-8")));
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
-        return strMD5;
+        String Salt = "mH8yhBL-n*j-2gmC" + str;
+        return Base64.getEncoder().encodeToString(Salt.getBytes(StandardCharsets.UTF_8));
     }
 
     public boolean checkMD5(String newStr, String oldStr) {
         return getMD5(newStr).equals(oldStr);
     }
+
+    public static void main(String[] args) {
+        MD5 md5 = new MD5();
+        System.out.println(md5.getMD5("toor"));
+    }
 }
+
